force-app/main/default/objects/CTR_CSR__c/CTR_CSR__c.object-meta.xml
<CustomObject>
    <description>This object is to record and store CTR and CSR reports</description>
    <label>CSR</label>
    <nameField>
        <label>CSR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>