force-app/main/default/objects/CTR_CSR__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggers an email from flow</description>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>