force-app/main/default/objects/CTR_CSR__c/fields/CSR_Name__c.field-meta.xml
<CustomField>
    <fullName>CSR_Name__c</fullName>
    <label>CSR Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>