force-app/main/default/objects/CTR_CSR__c/fields/CTR_Name__c.field-meta.xml
<CustomField>
    <fullName>CTR_Name__c</fullName>
    <label>CTR Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>