force-app/main/default/objects/CTR_CSR__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CTR &amp; CSR</relationshipLabel>
    <relationshipName>CTR_CSR</relationshipName>
    <type>Lookup</type>
</CustomField>