force-app/main/default/objects/CTR_CSR__c/fields/Encirc_Contact__c.field-meta.xml
<CustomField>
    <fullName>Encirc_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Encirc Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CTR_CSR</relationshipName>
    <type>Lookup</type>
</CustomField>