force-app/main/default/objects/CTR_CSR__c/fields/Filling_Line__c.field-meta.xml
<CustomField>
    <fullName>Filling_Line__c</fullName>
    <inlineHelpText>No need to add the word line to this field just enter the number or name please</inlineHelpText>
    <label>Filling Line</label>
    <type>TextArea</type>
</CustomField>