force-app/main/default/objects/CTR_CSR__c/fields/Filling_Site__c.field-meta.xml
<CustomField>
    <fullName>Filling_Site__c</fullName>
    <label>Filling Site</label>
    <type>TextArea</type>
</CustomField>