force-app/main/default/objects/CTR_CSR__c/fields/Formula_Name__c.field-meta.xml
<CustomField>
    <fullName>Formula_Name__c</fullName>
    <description>Updates Name via flow</description>
    <formula>IF(TEXT(Report_Type__c) = &quot;CTR&quot;, 

TEXT(Report_Type__c)&amp;&quot; - &quot;&amp; Customer_Name__r.Name &amp;&quot; - &quot;&amp;&quot;Line &quot;&amp; Filling_Line__c &amp;&quot; - &quot;
&amp; TEXT(Day(Date_of_Audit__c))&amp;&quot;.&quot;&amp;TEXT(MONTH(Date_of_Audit__c))&amp;&quot;.&quot;&amp;TEXT(YEAR(Date_of_Audit__c)), 


TEXT(Report_Type__c)&amp;&quot; - &quot;&amp; Customer_Name__r.Name &amp;&quot; - &quot;&amp;&quot;Site &quot;&amp;  Filling_Site__c  &amp;&quot; - &quot;
&amp; TEXT(Day(Date_of_Audit__c))&amp;&quot;.&quot;&amp;TEXT(MONTH(Date_of_Audit__c))&amp;&quot;.&quot;&amp;TEXT(YEAR(Date_of_Audit__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Name</label>
    <type>Text</type>
</CustomField>