force-app/main/default/objects/CTR_CSR__c/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <description>CSR field</description>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>