force-app/main/default/objects/CTR_CSR__c/fields/Specification_Document_Date_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Specification_Document_Date_of_Issue__c</fullName>
    <label>Specification Document Date of Issue</label>
    <type>Date</type>
</CustomField>