force-app/main/default/objects/CTR_CSR__c/fields/Specification_Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Specification_Document_Name__c</fullName>
    <label>Specification Document Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>