force-app/main/default/objects/CTR_CSR__c/fields/Specification_Document_Revision_Number__c.field-meta.xml
<CustomField>
    <fullName>Specification_Document_Revision_Number__c</fullName>
    <label>Specification Document Revision Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>