force-app/main/default/objects/CTR_CSR__c/recordTypes/CSR.recordType-meta.xml
<RecordType>
    <fullName>CSR</fullName>
    <active>true</active>
    <label>CSR</label>
</RecordType>