force-app/main/default/objects/CTR_CSR__c/recordTypes/CTR.recordType-meta.xml
<RecordType>
    <fullName>CTR</fullName>
    <active>true</active>
    <label>CTR</label>
</RecordType>