force-app/main/default/objects/CTR_CSR__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Date__c</columns>
    <columns>Encirc_Contact__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Files_uploaded__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>